# automation-python-hybrid

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: run-tests.yml
src/api/constants/: controllers.py
src/api/core/: base_models.py  builder.py  http_client.py  serializer.py
src/api/models/: room.py
src/api/services/: automation_service.py
src/config/: base.py
src/fixtures/: page.py  services.py  setup.py
src/web/constants/: locators.py
src/web/core/: base_page.py
src/web/pages/: main_page.py
tests/: test_automation_site.py  test_main_page.py
