[tool.poetry]
name = "automation-python-hybrid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^9.1.1"
httpx = "^0.28.1"
playwright = "^1.61.0"
black = "^26.5.1"
pre-commit = "^4.6.0"
allure-pytest = "^2.16.0"
pipenv = "^2026.6.2"
pydantic = "^2.13.4"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
